fix: minor styling change to apply some contrast to the background

--- a/src/app/components/cards/cards.module.css
+++ b/src/app/components/cards/cards.module.css
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   grid-gap: 1.5rem;
+  margin-bottom: var(--largeSpace);
 }
 
 .card {
@@ -15,7 +16,7 @@
   box-shadow: 0px 0px transparent;
   transition: all 350ms var(--ease);
   position: relative;
-  background: var(--background);
+  background: white; 
   overflow: hidden;
   color: var(--darkGray);
   &:before{
