--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background: var(--background); 
 }
 
 img,
@@ -55,7 +56,7 @@ h6 {
 /* DECLARE VARIABLES */
 :root {
   /* colors */
-  --background: #ffffff;
+  --background: #F1F0EF;
   --foreground: #171717;
   --lightGray: #E8E8E8;
   --mediumGray: #CECECE;
