--- a/src/app/planets/[id]/components/styles.module.css
+++ b/src/app/planets/[id]/components/styles.module.css
@@ -4,6 +4,7 @@
   margin: var(--largeSpace) auto;
   border-radius: var(--mediumRadius);
   box-shadow: var(--deepShadow);
+  background: white;
 }
 
 .title {
@@ -110,3 +111,5 @@
   }
 
 }
+
+
